# eseo-s9-aquabot

./: .gitignore  README.md  TODO.md
boat/: package.xml  setup.cfg  setup.py
boat/boat/: BoatState.py  GPSHandler.py  IMUHandler.py  Target.py  boat_state.py  controller.py  controller_mode.py  estimator.py  gps_handler.py  imu_handler.py  input_handler.py  pid.py  stop_start.py  thrusters.py  trajectory.py  vector_2d_plotter.py
boat/launch/: estimator_controller.launch.py  launch_all.launch.py
debug/: package.xml  setup.cfg  setup.py
debug/debug/: map.py
environment/: package.xml  setup.cfg  setup.py
environment/environment/: buoy_position_publisher.py  environment.py  image_subscriber.py  shared_types.py  threat_position_publisher.py
environment/src/: allies_subscriber.py  buoy_pinger_subscriber.py  buoy_position_publisher.py  environment.py  exact_threat_position_subscriber.py  image_subscriber.py  lidar_object_publisher.py  lidar_subscriber.py  shared_types.py  threat_position_publisher.py
environment_interfaces/: CMakeLists.txt  package.xml
environment_interfaces/msg/: BoatState.msg  BoatTrajectory.msg  BuoyInfo.msg  LidarCluster.msg  LidarObject.msg  ThreatInfo.msg
estimator/: package.xml  setup.cfg  setup.py
estimator/estimator/: estimator_node.py
high_level/: package.xml  setup.cfg  setup.py
high_level/high_level/: buoy.py  graph_plotter.py  high_level.py  obstacle.py  (+3 more)
install/: install_gazebo_garden.sh  install_ros_humble.sh  install_vrx.sh
planificator/: planificator_node.cpp
planificator_traj/: CMakeLists.txt  package.xml
(+1 files in other folders)
