<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>environment</name>
  <version>0.0.0</version>
  <description>Module de gestion Camera/LIDAR/acoustique</description>
  <maintainer email="eliot.coulon@reseau.eseo.fr">eliot</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs </exec_depend>
  <exec_depend>cv_bridge </exec_depend>
  <exec_depend>image_transport </exec_depend>
  <exec_depend>OpenCV</exec_depend> 
  <exec_depend>environment_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
